; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/extres/regulator/extr_regulator.c_regulator_get_by_name.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/extres/regulator/extr_regulator.c_regulator_get_by_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regnode = type { i32 }

@ENODEV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @regulator_get_by_name(i32 %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.regnode*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = call i32 (...) @REG_TOPO_SLOCK()
  %10 = load i8*, i8** %6, align 8
  %11 = call %struct.regnode* @regnode_find_by_name(i8* %10)
  store %struct.regnode* %11, %struct.regnode** %8, align 8
  %12 = load %struct.regnode*, %struct.regnode** %8, align 8
  %13 = icmp eq %struct.regnode* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = call i32 (...) @REG_TOPO_UNLOCK()
  %16 = load i32, i32* @ENODEV, align 4
  store i32 %16, i32* %4, align 4
  br label %23

17:                                               ; preds = %3
  %18 = load %struct.regnode*, %struct.regnode** %8, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @regulator_create(%struct.regnode* %18, i32 %19)
  %21 = load i32*, i32** %7, align 8
  store i32 %20, i32* %21, align 4
  %22 = call i32 (...) @REG_TOPO_UNLOCK()
  store i32 0, i32* %4, align 4
  br label %23

23:                                               ; preds = %17, %14
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @REG_TOPO_SLOCK(...) #1

declare dso_local %struct.regnode* @regnode_find_by_name(i8*) #1

declare dso_local i32 @REG_TOPO_UNLOCK(...) #1

declare dso_local i32 @regulator_create(%struct.regnode*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
